# wine-prediction

./: README.md  app.py  pyproject.toml  wine_model.pth
app/: Dockerfile  app.py
dashboard/: Dockerfile  wine_dashboard.py
data/: model_training.py
deploy/kubernetes/: api-deployment.yaml  api-service.yaml  dashboard-deployment.yaml  dashboard-service.yaml  deployment.yaml
model/: data_eda.ipynb  model_training.py  wine_model.pth
model/training/: data_eda.ipynb  model_training.py
