[tool.poetry]
name = "wine-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.3"
pandas = "^2.2.3"
numpy = "^2.2.0"
ipykernel = "^6.29.5"
scikit-learn = "^1.6.0"
torch = "^2.5.1"
pydantic = "^2.10.3"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
