[tool.poetry]
name = "wine-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "model" }  # Include the 'model' directory
]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.3"
pandas = "^2.2.3"
numpy = "^2.2.0"
ipykernel = "^6.29.5"
scikit-learn = "^1.6.0"
torch = "^2.5.1"
pydantic = "^2.10.3"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"

# add command line tools to the pyproject.toml to execute model/training/model_training.py
streamlit = "^1.41.0"
requests = "^2.32.3"
[tool.poetry.scripts]
train_model = "model.training.model_training:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


